--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -17,13 +17,26 @@
       specify the type!
     - Insert correct placeholder properties based on our Model.
     -->
+    <script id="blog-template" type="text/x-handlebars-template">
+      <article class="clearfix" data-author="{{author}}" data-category="{{category}}">
+        <header>
+          <h1>{{title}}</h1>
+          <div class="byline">
+            By <address><a href="{{authorUrl}}">{{author}}</a></address>
+            {{publishStatus}}
+            </div>
+          </header>
+          <section class="article-body">{{body}}</section>
+          <a href="" class="read-on"> Read on &rarr;</a>
+        </article>
+      </script>
 
 
 
     <!--
         STRETCH! Look at all that duplicated markup in our #filter items!
         Looks like a good opportunity to use a template.
-        Make a small template for each template, and render the list once 
+        Make a small template for each template, and render the list once
         you have data to populate it with.
        -->
   </head>
@@ -81,7 +94,7 @@
       &copy; 2016 Code Fellows | Static Blog | Happy Ipsum!
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <!-- TODO: Include Handlebars.JS from a CDN -->
+    <script src="handlebars.js/4.0.5/handlebars.amd.min.js"></script>
     <script src="scripts/blogArticles.js"></script>
     <script src="scripts/article.js"></script>
     <script src="scripts/articleView.js"></script>
