--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -17,17 +17,18 @@
       specify the type!
     - Insert correct placeholder properties based on our Model.
     -->
-    <script id="" type="">
-      <article class="clearfix" data-author="" data-category="">
+    <script id="article-template" type="text/x-handlebars-template">
+      <article class="clearfix" data-author={{author}} data-category={{category}}>
         <header>
-          <h1> </h1>
+          <h1>{{title}} </h1>
           <div class="byline">
-            By <address><a href=""> </a></address>
+            By <address><a href={{authorUrl}}> </a></address>
             {{publishStatus}}
           </div>
         </header>
-        <section class="article-body"> </section>
-        <a href="" class="read-on"> Read on &rarr;</a>
+        <section class="article-body"> {{{body}}}</section>
+
+        <a href="#" class="read-on"> Read on &rarr;</a>
       </article>
     </script>
 
@@ -94,6 +95,7 @@
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <!-- TODO: Include Handlebars.JS from a CDN -->
+    <script src="https://cdn.jsdelivr.net/handlebarsjs/4.0.5/handlebars.min.js"></script>
     <script src="scripts/blogArticles.js"></script>
     <script src="scripts/article.js"></script>
     <script src="scripts/articleView.js"></script>
