--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -18,14 +18,14 @@
     - Insert correct placeholder properties based on our Model.
     -->
     <script id="articles-template" type="text/x-handlebars-template">
-      <article class="clearfix" data-author="" data-category="">
+      <article class="clearfix" data-author="{{author}}" data-category="{{category}}">
         <header>
           <h1>{{title}}</h1>
           <div class="byline">
-            By <address><a href="{{authorUrl}}"> </a>{{author}}</address>
+            By <address><a href="{{authorUrl}}">{{author}}</a></address>
             {{publishStatus}}
             <br>
-            Categorry: {{category}}
+            Category: {{category}}
             <br>
             Date: {{publishedOn}}
           </div>
