--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -31,7 +31,13 @@
       </article>
     </script>
 
+    <script id="author-template" type="text/x-handlebars-template">
+      <option value="{{author}}">{{author}}</option>
+    </script>
 
+    <script id="category-template" type="text/x-handlebars-template">
+      <option value="{{category}}">{{category}}</option>
+    </script>
     <!--
         STRETCH! Look at all that duplicated markup in our #filter items!
         Looks like a good opportunity to use a template.
@@ -65,11 +71,13 @@
             <li>
               <select id="author-filter">
                 <option value="">-- Filter by Authors --</option>
+
               </select>
             </li>
             <li>
               <select id="category-filter">
                 <option value="">-- Filter by Categories --</option>
+
               </select>
             </li>
           </ul>
