--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -30,6 +30,12 @@
         <a href="" class="read-on"> Read on &rarr;</a>
       </article>
     </script>
+    <script id="author-template" type="text/x-handlebars-template">
+      <option value="{{author}}">{{author}}</option>
+   </script>
+    <script id="category-template" type="text/x-handlebars-template">
+      <option value="{{category}}">{{category}}</option>
+    </script>
     <!--
         STRETCH! Look at all that duplicated markup in our #filter items!
         Looks like a good opportunity to use a template.
